<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IAMP</string>
    <string name="action_settings">settings</string>
    <string name="auth_name">by  yoyo_zyx</string>
    <string name="crate_room">创建房间</string>
    <string name="join_room">进入房间</string>
    <string name="quit_room">退出房间</string>
    <string name="room_number">房号:</string>
    <string name="devices_count">设备数:</string>
    <string name="logo">logo</string>
    
    <string name="wifi_model">wifi 模式</string>
    <string name="buletooth_model">蓝牙模式</string>
    <string name="demo_apk">第三方demo</string>
    <string name="bt_devices">设备</string>
    <string name="bt_talk">请求</string>
    <string name="me">我</string>
    <string name="device_filter">可通过蓝牙名称、地址关键字搜索</string>
    <string name="history_filter">可通过蓝牙名称关键字搜索</string>
    <string name="input">请输入内容</string>
    <string name="send">发送</string>
    <string name="choose">+</string>
    <string name="bt_icon">蓝牙图标</string>
    <string name="rename">重命名</string>
    <string name="info_title">本机</string>
    <string name="info_name">名称:</string>
    <string name="info_mac">MAC:</string>
    <string name="info_phone">号码:</string>
    <string name="info_icon">图标</string>
    
    <color name="black">#000000</color>
    <color name="whilte">#ffffff</color>
    <color name="gray">#cccccc</color>
    <color name="blue">#63B8FF</color>
    <color name="green">#3cb371</color>
    
</resources>
